gap fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .App{
   position: relative;
+  overflow: hidden;
 }
 .navbar {
   background-color: #1f1f1f !important;
   z-index: 100;
   height: 8vh;
+}
+.h1{
+  font-size:100px ;
 }
 .navlogo {
   margin-left: 70%;
@@ -45,7 +49,7 @@
   align-items: center;
 }
 .head {
-  margin-top: 150px;
+  margin-top: 140px;
   font-family: "Anton", sans-serif;
   letter-spacing: 1px;
 }
@@ -211,10 +215,15 @@ margin: 0px;
 
 
 @media only screen and (max-width: 1000px) {
+  
   .flex-container {
     display: flex;
     width: 100%;
     justify-content: center;
+  }
+
+  .h1{
+    font-size: 70px;
   }
 
   #vl2 {
@@ -232,5 +241,9 @@ margin: 0px;
 
   .team{
     justify-content: center;
+  }
+  .head{
+    left: 5% !important;
+    
   }
 }
